# aoc2024

./: .gitignore  Cargo.toml
days/day1/src/: lib.rs
days/day10/src/: lib.rs
days/day11/src/: lib.rs
days/day12/src/: lib.rs
days/day13/src/: lib.rs
days/day14/src/: lib.rs
days/day15/: Cargo.toml
days/day15/src/: lib.rs
days/day16/src/: lib.rs
days/day17/src/: lib.rs
days/day18/src/: lib.rs
days/day19/src/: lib.rs
days/day2/src/: lib.rs
days/day20/src/: lib.rs
days/day21/src/: lib.rs
days/day22/: Cargo.toml
days/day22/src/: lib.rs
days/day23/src/: lib.rs
days/day24/src/: lib.rs
days/day25/src/: lib.rs
days/day3/src/: lib.rs
days/day4/src/: lib.rs
days/day5/src/: lib.rs
days/day6/src/: lib.rs
days/day7/src/: lib.rs
days/day8/src/: lib.rs
days/day9/src/: lib.rs
days/starter/: Cargo.toml
days/starter/src/: lib.rs
src/: main.rs
