[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "days/day1",
    "days/day2",
    "days/day3",
    "days/day4",
    "days/day5",
    "days/day6",
]

[dependencies]
day1 = { path = "./days/day1" }
day2 = { path = "./days/day2" }
day3 = { path = "./days/day3" }
day4 = { path = "./days/day4" }
day5 = { path = "./days/day5" }
day6 = { path = "./days/day6" }
ureq = "2.11.0"
