[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "days/day1",
    "days/day2",
    "days/day3",
    "days/day4",
    "days/day5",
    "days/day6",
    "days/day7",
    "days/day8",
    "days/day9",
    "days/day10",
    "days/day11",
    "days/day12",
    "days/day13",
    "days/day14",
]

[dependencies]
ureq = "2.11.0"
day1 = { path = "./days/day1" }
day2 = { path = "./days/day2" }
day3 = { path = "./days/day3" }
day4 = { path = "./days/day4" }
day5 = { path = "./days/day5" }
day6 = { path = "./days/day6" }
day7 = { path = "./days/day7" }
day8 = { path = "./days/day8" }
day9 = { path = "./days/day9" }
day10 = { path = "./days/day10" }
day11 = { path = "./days/day11" }
day12 = { path = "./days/day12" }
day13 = { path = "./days/day13" }
day14 = { path = "./days/day14" }
